--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar> <app-nav></app-nav> </mat-toolbar>
   <div>
-  <h1>Sono App Component</h1>
+  <h1>BENTORNATO</h1>
   <router-outlet></router-outlet>
 </div>
