--- a/Angular/src/app/app.component.scss
+++ b/Angular/src/app/app.component.scss
@@ -1,4 +1,26 @@
 a {
     font-size: 2rem;
 }
+h1 {
+    margin-left: 2rem;
+    margin-top: 2rem;
+    text-align: center;
+    color: whitesmoke;
+    background: url(../../src/assets/img/pngfind.com-stripper-silhouette-png-1416442.png) no-repeat ;
+    background-position: right;
+    height: 70rem;
+
+}
+
+.container .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+  }
+div {
+    height: 70rem;
+    box-shadow: 23px 23px 48px #7b1fa2;
+    background: url(../../src/assets/img/pngfind.com-stripper-silhoueette-png-1416442.png) no-repeat;
+    background-position: left;
+    
+}
+ 
    
