--- a/Angular/src/app/auth/login/login.page.html
+++ b/Angular/src/app/auth/login/login.page.html
@@ -1,20 +1,34 @@
 
 <div class="box-container">
-  <h1 class="m-5 text-center">Login Page</h1>
+  <h1>Login</h1>
+  
   <form #f="ngForm" (ngSubmit)="onSubmit()">
-    <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" ngModel name="email" class="form-control" id="email">
+
+  <div class="container">
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your email</mat-label>
+    <label for="email" class="form-label"></label>
+    <input matInput type="email" ngModel name="email" class="form-control" id="email">
+    </mat-form-field>
+  </div>
+  
+    <div class="example-container">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your password</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" ngModel name="password" class="form-control" id="password">
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </mat-form-field>
     </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input type="password" ngModel name="password" class="form-control" id="password">
-    </div>
-    <div class="mb-3 mt-5">
-      <button type="submit" class="btn btn-primary w-100">Submit</button>
+
+    <div>
+      <button type="submit" class="botton">Submit</button>
     </div>
   </form>
+
   <div class="alert alert-danger" role="alert" *ngIf="error">
     {{error}}
   </div>
+
 </div>
