--- a/Angular/src/app/auth/signup/signup.page.scss
+++ b/Angular/src/app/auth/signup/signup.page.scss
@@ -3,4 +3,19 @@
   margin: 2em auto;
   border: 1px solid grey;
   padding: 1.5em;
+  box-shadow: 23px 23px 48px #7b1fa2;
+border-radius: 43px;
+color: antiquewhite;
+text-align: center;
+position: relative;
+top: -51rem;
+}
+.botton {
+  font-size: 1.2rem;
+  background-color: black;
+  border-radius: 10px;
+  padding: 0.4rem 0.4rem;
+  color: #7b1fa2;
+  font-weight: 800;
+  box-shadow:  5px 5px 5px black;
 }
