--- a/Angular/src/app/header/nav/nav.component.html
+++ b/Angular/src/app/header/nav/nav.component.html
@@ -1,14 +1,10 @@
 
-    <!-- <a class="nav-link" href="#" [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a>
-    <a class="nav-link" href="#" [routerLink]="['/users']" routerLinkActive="router-link-active" >Users</a>
-    <a class="nav-link" href="#" [routerLink]="['/contact']" routerLinkActive="router-link-active" >Contact</a>
-    <a type="button" class="btn btn-outline-dark ms-5" [routerLink]="['/login']" routerLinkActive="router-link-active">Login</a>
-    <a type="button" class="btn btn-outline-success ms-1" [routerLink]="['/signup']" routerLinkActive="router-link-active">Signup</a>
-    <button type="button" class="btn btn-sm btn-outline-warning ms-1" (click)="logout()">Logout</button> -->
 <mat-toolbar>
-  <mat-toolbar-row color="primary">
+  <mat-toolbar>  <div><span><app-navbar></app-navbar></span></div>
+  </mat-toolbar>
+
+  <mat-toolbar color="primary">
     
-    <span><app-navbar></app-navbar></span>
     <div>
     <a class="nav-link" href="#" [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a>
       <a class="nav-link" href="#" [routerLink]="['/users']" routerLinkActive="router-link-active" >Users</a>
@@ -17,5 +13,5 @@
       <a type="button" [routerLink]="['/signup']" routerLinkActive="router-link-active">Signup</a>
       <button type="button"  (click)="logout()">Logout</button> 
     </div>
-  </mat-toolbar-row>
+  </mat-toolbar>
 </mat-toolbar> 
