--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+ }
+body > app-root:nth-child(1) > mat-toolbar:nth-child(1) {
+    justify-content: center;
+   }
+   .mat-typography {
+    background-color: black !important;
+}
