--- a/Angular/src/app/auth/signup/signup.page.scss
+++ b/Angular/src/app/auth/signup/signup.page.scss
@@ -1,6 +1,6 @@
 .box-container {
-  width: 50%;
-  margin: 2em auto;
+  width: 20%;
+  margin: auto auto;
   border: 1px solid grey;
   padding: 1.5em;
   box-shadow: 23px 23px 48px #7b1fa2;
