--- a/Angular/src/app/home/home/home.page.scss
+++ b/Angular/src/app/home/home/home.page.scss
@@ -1,4 +1,8 @@
-h1 {
+h1 , h3 {
     margin: 2rem 2rem;
-    
+    color: antiquewhite;
+    position: relative;
+top: -1038px;
+text-align: center;
+
 }
